--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,16 @@ body {
     height: 100%;
     margin: 0;
 }
+
+/* quicksand-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Quicksand';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/fonts/quicksand-v30-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+
 .outermost-div { 
     display: flex;
     height: 100%;
@@ -39,6 +49,7 @@ body {
     font-size: 6em;
     margin: 0;
     padding: 0;
+    font-family: Quicksand, Times New Roman;
     color: white;
 }
 
