--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,38 @@ body {
 
 }
 
+.right-upper-div p { 
+    font-weight: bold;
+}
+.right-middle-div { 
+    border: 5px black solid; 
+    padding-top: 5em; 
+    padding-bottom: 5em; 
+    height: 33%;
+}
+
+.right-lower-div button { 
+    padding: 1em;
+    background-color:burlywood;
+    border-radius: 0.8em; 
+    border: none;
+}
+
+.right-lower-div { 
+    border: 5px yellow solid; 
+    height: 33%; 
+    padding-top: 5em; 
+    padding-bottom: 5em;
+    padding-left: 1em;
+}
+
+.right-upper-div { 
+    height: 33%; 
+    border: 5px orange solid; 
+    padding-top: 2em; 
+    padding-bottom: 1em;
+}
+
 .img-credit { 
     color: white;
     margin-top: auto; 
@@ -77,5 +109,7 @@ body {
 .right-outer-div { 
     width: 66%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
     border: 5px red solid;
 }
