--- a/styles.css
+++ b/styles.css
@@ -138,9 +138,13 @@ input {
     width: 15em;
     border-color: #E5E7EB;
     box-shadow: none;
+    border-radius: 0.3em;
+    border: 1px #E5E7EB solid;
+    padding: 0.25em;
 }
 label { 
     font-size: 12px; 
+    font-weight: 500;
     letter-spacing: 1.25px;
 }
 .right-upper-div p { 
