--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 html { 
     box-sizing: border-box;
     margin: 0;
-    background-color: #efefef;
+    padding: 0;
+    height: 100%;
+    background-color: #F9FAFB;
 }
 * { 
     box-sizing: border-box;
@@ -36,15 +38,18 @@ button {
 
 .outermost-div { 
     display: flex;
-    border: 5px solid black;
+    /* border: 5px solid black; */
     height: 100%;
+    padding: 0;
+    width: 100%;
+    margin: 0;
 }
 
 .left-outer-div { 
-    width: 33%;
+    width: 33.33333333%;
     height: 100vh;
-    padding: 5px;
-    border: 5px blue solid;
+    /* padding: 5px; */
+    /* border: 5px blue solid; */
     background-image: url(/imgs/sean-lee-Yli_dIlJ2Sk-unsplash.jpg);
     background-size: cover;
     display: flex; 
@@ -58,11 +63,12 @@ button {
     display: flex; 
     justify-content: center;
     align-items: center; 
-    border: 5px yellow solid;
+    /* border: 5px yellow solid; */
+    height: 100%;
 }
 
 .logo { 
-    width: 9em;
+    width: 7em;
     filter:invert();
 }
 
@@ -76,10 +82,11 @@ button {
 
 .left-transparent-div { 
     margin-top: 10em;
+    height: 14.5%;
     width: 100%;
     background: rgb(0, 0, 0, 0.5);
     margin-bottom: auto;
-    border: 5px green solid;
+    /* border: 5px green solid; */
     display: flex; 
     justify-content: center;
     flex-direction: column;
@@ -87,45 +94,51 @@ button {
 }
 
 .right-outer-div { 
-    width: 66%;
-    padding: 5px;
+    width: 66.666666%;
     height: 100vh;
     display: flex;
+    margin: 0;
+    padding: 0;
     flex-direction: column;
-    border: 5px red solid;
+    /* border: 5px red solid; */
 
 }
 
 .right-middle-div { 
-    border: 5px green solid; 
+    /* border: 5px green solid;  */
     background-color: white;
-    height: 33%;
+    height: 29%;
+    margin: 0;
     display: flex; 
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     flex-direction: column;
     padding: 0;
+    align-content: space-between;
+    box-shadow: 0px 0.25em 7px rgba(0,0,0,0.08);
+
 }
 
 .upper-form-div { 
     display: flex; 
-    padding: 0.25em; 
+    /* padding: 0.25em;  */
     width: 100%;
     margin-right: 15em;
+    
 }
 
 .right-lower-div { 
-    border: 5px yellow solid; 
+    /* border: 5px yellow solid;  */
     /* padding-top: 5em; 
     padding-bottom: 5em;
     padding-left: 1em; */
-    height: 33%;
+    height: 34.5%;
 
 }
 
 .right-upper-div { 
-    border: 5px orange solid; 
+    /* border: 5px orange solid;  */
     padding-top: 4em; 
-    height: 33%;
+    height: 36.3%;
     padding-bottom: 2em;
     padding-left: 2em;
     padding-right: 10em;
@@ -135,7 +148,7 @@ button {
 }
 
 input { 
-    width: 15em;
+    width: 14em;
     border-color: #E5E7EB;
     box-shadow: none;
     border-radius: 0.3em;
@@ -143,7 +156,7 @@ input {
     padding: 0.25em;
 }
 label { 
-    font-size: 12px; 
+    font-size: 0.75em;
     font-weight: 500;
     letter-spacing: 1.25px;
 }
@@ -154,31 +167,34 @@ label {
 .img-credit { 
     color: white;
     margin-top: auto; 
-    font-size: 14px; 
+    font-size: 0.8em; 
+    font-weight: 200;
 }
 
 .img-credit a { 
     text-underline-position: under
 }
 
+
 .form-pair { 
     display: flex;
     flex-direction: column;
-    margin-right: 4em;
+    margin-right: 3em;
     width: 20vh;
     margin-left: 2em;
     margin-bottom: 1em;
 
 }
 
+
 .form-header { 
     font-weight: bold; 
-    /* font-size: 1.5em; */
-    margin-left: 2.2em;
-    margin-top: 0.5em;
+    font-size: 1.25em;
+    margin-left: 1.8em;
+    margin-top: 0.95em;
 }
 button:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+    box-shadow: inset -2px -2px 10px rgba(255, 255, 255, 0.6), inset 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
 button {
@@ -189,22 +205,28 @@ button {
     background: none;
     cursor: pointer;
     padding: 0.9em;
-    width: 15em;
+    width: 13em;
     background-color:burlywood;
     border: none;
     margin-left: 2.7em; 
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
     margin-top: 2em; 
 }
 
 input:focus,
 textarea:focus {
   border: none;
+  outline: none;
+  border: 1px solid blue;
   border-radius: 5px;
   box-shadow: 0px 0.25em 10px rgba(0,0,0,0.2);
 }
 
 button + p { 
-    margin-left: 2em;
+    margin-left: 2.8em;
+    margin-top: 2em;
+    font-size: 13px;
+    
 }
 
 input[type="tel"]:invalid:active { 
