--- a/styles.css
+++ b/styles.css
@@ -253,3 +253,24 @@ button + p {
 input:focus:invalid { 
     outline: none; 
 }
+
+@media (max-width: 600px) { 
+    body {
+        font-size: 18px;
+      }
+}
+
+@media (min-width: 601px) and (max-width: 900px){ 
+
+}
+
+@media (min-width: 901px) { 
+
+}
+
+img { 
+    max-width: 100%; 
+    height: auto;
+}
+
+.container { }
